syntax="proto3";
package atd.protocol;

import "header.proto";
import "opengl_elements.proto";

option optimize_for = LITE_RUNTIME;

message Monitor_Message {
  Header msg_header = 1;
  map<string, Opengl_Elements> window_opengl = 2;
}