syntax="proto3";
package atd.protocol;

option optimize_for = LITE_RUNTIME;

message Header {
  uint64 time_stamp = 1;
  uint64 msg_counter = 2;
}

